# ai-forms

./: .env.example  .gitignore  CLAUDE.md  README.md  TESTING_FRAMEWORK_COMPLETE.md  TEST_SUMMARY.md  pyproject.toml  spec.md  streamlit_app.py
_tasks/: implement_pydantic_ai.txt
ai_forms/: __init__.py
ai_forms/core/: form.py
ai_forms/generators/: base.py
ai_forms/parsers/: __init__.py  ai_parser.py
ai_forms/types/: config.py  enums.py  exceptions.py  responses.py
ai_forms/validation/: __init__.py  ai_validator.py
ai_forms/validators/: ai_tools.py  base.py
examples/: ai_validation_demo.py  basic_ai_form.py  basic_example.py  simple_example.py
tests/: conftest.py  test_helpers.py
tests/integration/: test_complete_workflows.py
tests/unit/: test_ai_integration.py  test_ai_validation_tools.py  test_ai_validator.py  test_core_form.py  test_edge_cases.py  test_form_vs_direct_validation.py  test_performance.py  test_question_generation.py  test_validation.py
